# DCNN

./: .DeformableConvolution.lua.kate-swp  .out.txt.kate-swp  .test_forward.lua.kate-swp  .test_frame.lua.kate-swp  .tutorial.lua.kate-swp  CMakeLists.txt  DeformableConv.lua  DeformableConvolution.lua  README.md  SlowSpatialConvolution.lua  Untitled.ipynb  almostIdentity.lua  benchmark.lua  cifar_visualization.lua  create_mnist.lua  deformableconvolution-0.1-0.rockspec  image_augmentation.h  init.lua  mnist.lua  mnist_checkpoint.t7  mnist_checkpoint1.t7  mnist_visualization.lua  normalize.lua  out.html  out.txt  resize.lua  rotate_test.lua  slowspatialconvolution-0.1-0.rockspec  test.lua  test_conv.lua  test_forward.lua  test_frame.lua  tutorial.lua  visualization.lua
buildrock/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
ccode/: SlowSpatialConvolution.cpp  SlowSpatialConvolution.h  deformableconvolution.cpp  deformableconvolution.h  deformableconvolutionnew.cpp
